test/org/midica/testfiles/failing/soundbank-file-invalid.midica
INCLUDE inc/instruments.midica

SOUNDBANK  inc/instruments.midica

0 c /4
